# Preventative-Maintainance-Example

./: .gitignore  AGENT_UPDATE_SUMMARY.md  CLAUDE.md  EPOCH_RESTRUCTURE_SUMMARY.md  README.md
.claude/: settings.local.json
.claude/agents/: Agent-Interaction-Protocol.md  Business-Analyst-Agent.md  Data-Scientist-Agent.md  Data-Wrangler-Agent.md  Example-Demonstration-Flows-With-File-Structure.md  Front-End-Developer-Agent.md  MLOps-Engineer-Agent.md  Model-Developer-Agent.md  Model-Tester-Agent.md  README.md
.context/: README.md  agent_context.py  pipeline_state.json
.reference/: boilerplate_patterns.md  epoch_templates.md  framework_configs.json  visualization_standards.md
.reference/docs/: DominoDocumentation.md
.reference/flows/multitrain-flow/: h2o_model_train.py  sklearn_RF_train.py  sklearn_log_reg_train.py  xgb_model_train.py
.reference/flows/sonar-data-processing/: denoise_and_background.py  load_dataset.py
.reference/governance/: Approvers.md  Example EthicalAI.yml  Example External LLM Governance Policy.yml  Example ModelIntake.yml  Example ModelRiskManagementV3.yml  Example NIST RMF.yml
epoch001-research-analysis-planning/: README.md  project_plan.json  requirements.md  resource_estimates.json  risk_assessment.json  success_criteria.json
epoch002-data-wrangling/: README.md  validate_quality.py
epoch002-data-wrangling/scripts/: generate_thermal_images.py  generate_turbofan_data.py
epoch003-exploratory-data-analysis/: README.md
epoch003-exploratory-data-analysis/notebooks/: 01_data_overview_and_rul.ipynb  02_sensor_distributions.ipynb  03_temporal_patterns.ipynb  04_correlation_analysis.ipynb  05_feature_importance.ipynb  eda_analysis.py  eda_analysis_simple.py
epoch004-feature-engineering/: README.md
epoch004-feature-engineering/scripts/: create_train_test_splits.py  feature_engineering.py  validate_features.py
epoch005-model-development/: README.md
epoch005-model-development/scripts/: train_baseline_models.py  tune_models.py
epoch006-model-testing/: README.md
epoch007-application-development/: README.md
epoch008-retrospective/: README.md
src/predictive_maintenance/: README.md  __init__.py  data_utils.py  feature_engineering.py
template/: README.md  pyproject.toml
template/src/template/: __init__.py  __main__.py
